--- a/README.Rmd
+++ b/README.Rmd
@@ -38,8 +38,7 @@ It is possible to visualize the QSM with or without the point cloud and showing 
 
 3d plot with Branch order colorized or the QSM with point cloud:
 
-<img width="30%" src="141_plot_branch_order.JPG"/>
-<img width="30%" src="141_plot_pc.JPG"/>
+<img width="50%" src="141_plot_branch_order_pc.JPG"/>
 
 
 Some function allows modifying the QSM (e.g *cleanQSM()*, *TruncateQSM()*) and propose a visualization of the results.
@@ -54,8 +53,7 @@ It is also possible to select a part of the QSM in a 3D interactive window by fo
 
 Select a part of the QSM by following *selectinQSM_3d()* function instruction:
 
-<img width="30%" src="select_in3d_1.JPG"/>
-<img width="30%" src="select_in3d_2.JPG"/>
+<img width="50%" src="selectin3d.jpg"/>
 
 
 All the characteristics of the selected part are returns:
