--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+* version 1.0.6
+- Correction axis_ID problems -> When two successive segments had the error step 1 in read_QSM for treeQSM format
+- Correction of some typos in the help files
+- correction plot when skeleton for segment (which is not a cylinder)
+
 * version 1.0.5
 CRAN asked for a correction: Done
   - remove package nat that is not used anymore
