--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+* version 1.0.7
+- correction of the LAS format for lidR 4.0.0
+
 * version 1.0.6
 - Correction axis_ID problems -> When two successive segments had the error step 1 in read_QSM for treeQSM format
 - Correction of some typos in the help files
