edtion of DESCRIPTION and NEWS

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+* version 2.1.0
+
+- Minor changes on the new functions mosty edition of help files
+
+
 * version 2.0.0
 - Update lidR and dependencies
 - add Bastien's functions:
