--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+* version 2.1.1
+
+- Minor changes on some functions, mainly plot due to dependencies issues.
+
 * version 2.1.0
 
 - Minor changes on the new functions mosty edition of help files
