--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+* version 2.1.2
+
+- Improved read_QSM to read .mat file and new version of treeQSM (2.4).
+- remove lost branches when read QSM
+
 * version 2.1.1
 
 - Minor changes on some functions, mainly plot due to dependencies issues.
